--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "name": "URLVoid Firefox Extension",
   "description" : "Check all scripts. With 2 clicks. (Disclaimer: This is not an official URLVoid tool. Just an experimental tool that creates and opens links.)",
   "version": "1.0.0",
+  "homepage_url": "https://github.com/hchiam/urlvoid-firefox-extension",
   "icons": {
     "48": "example-icon.png"
   },
