--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "URLVoid Firefox Extension",
-  "description" : "Check all scripts. With 3 clicks. (Disclaimer: This is not an official URLVoid tool. Just an experimental tool that creates and opens links.)",
+  "description" : "Check all scripts. With 3 clicks. (Disclaimer: This is not an official URLVoid tool. Just an experimental tool that creates and opens links. Recommended to be used in combination with the add-on NoScript.)",
   "version": "1.0.0",
   "homepage_url": "https://github.com/hchiam/urlvoid-firefox-extension",
   "icons": {
