--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,10 @@
     }
   ],
   "browser_action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": {
+      "128": "icon.png"
+    }
   },
   "permissions": ["storage", "activeTab", "tabs"]
 }
