--- a/manifest.json
+++ b/manifest.json
@@ -21,5 +21,5 @@
       "128": "icon128.png"
     }
   },
-  "permissions": ["storage", "activeTab", "tabs"]
+  "permissions": ["storage", "tabs"]
 }
